--- a/writer.css
+++ b/writer.css
@@ -24,6 +24,12 @@ body {
   nav ul li a {
     color: #fff;
     text-decoration: none;
+    border: #fff 2px solid;
+    padding: 7px;
+  }
+  a :hover {
+    color: white;
+    background-color: #333;
   }
   
   section {
@@ -63,7 +69,7 @@ body {
     cursor: pointer;
   }
   p{
-    letter-spacing: 2px;
-    line-height: 23px;
+    letter-spacing: 1px;
+    line-height: 25px;
   }
   
